@@ -1,0 +1,87 @@
+[Desktop Entry]
+Name=Qt 5 Assistant
+Name[bg]=Qt 5 асистент
+Name[cs]=Qt 5 asistent
+Name[hu]=Qt 5 Asszisztens
+Name[ja]=Qt 5アシスタント
+Name[km]=អ្នក​ជំនួយការ Qt 5
+Name[nb]=Qt 5-assistent
+Name[pa]=Qt 5 ਸਹਾਇਕ
+Name[sv]=Qt 5-assistent
+Name[zh_CN]=Qt 5 助手
+Name[zh_TW]=Qt 5 助理
+GenericName=Document Browser
+GenericName[af]=Dokument Blaaier
+GenericName[az]=Sənəd Səyyahı
+GenericName[bg]=Преглед на документи
+GenericName[bn]=নথী ব্রাউজার
+GenericName[br]=Furcher Teulioù
+GenericName[bs]=Preglednik QT dokumenata
+GenericName[ca]=Navegador de documents
+GenericName[cs]=Prohlížeč dokumentace
+GenericName[cy]=Porydd Dogfen
+GenericName[da]=Dokumentfremviser
+GenericName[de]=Dokumentbrowser
+GenericName[el]=Προβολέας εγγράφων
+GenericName[eo]=Dokumentorigardilo
+GenericName[es]=Navegador de documentos
+GenericName[et]=Dokumentatsiooni brauser
+GenericName[eu]=Dokumentu Ikustailua
+GenericName[fa]=مرورگر سند
+GenericName[fi]=Asiakirjaselain
+GenericName[fo]=Skjalakagari
+GenericName[fr]=Explorateur de documentation Qt
+GenericName[gl]=Explorador de Documentos
+GenericName[he]=דפדפן מסמכים
+GenericName[hi]=दस्तावेज़़ ब्राउज़र
+GenericName[hr]=Preglednik dokumenata
+GenericName[hu]=Dokumentumböngésző
+GenericName[is]=Skjalavafri
+GenericName[it]=Visualizzatore di documenti
+GenericName[ja]=ドキュメントブラウザ
+GenericName[km]=កម្មវិធី​រុករក​ឯកសារ
+GenericName[ko]=문서 탐색기
+GenericName[lo]=ເຄື່ອງມືເລືອກເບິ່ງແຟ້ມເອກະສານ
+GenericName[lt]=Dokumentų žiūriklis
+GenericName[lv]=Dokumentu Pārlūks
+GenericName[mn]=Баримтын хөтөч
+GenericName[ms]=Pelungsur Dokumen
+GenericName[mt]=Browser ta' Dokumenti
+GenericName[nb]=Dokumentleser
+GenericName[nds]=Dokmentkieker
+GenericName[nl]=Documentbrowser
+GenericName[nn]=Dokumentlesar
+GenericName[nso]=Seinyakisi sa Tokomane
+GenericName[pa]=ਦਸਤਾਵੇਜ਼ ਝਲਕਾਰਾ
+GenericName[pl]=Przeglądarka dokumentów
+GenericName[pt]=Navegador de Documentos
+GenericName[pt_BR]=Navegador de Documentos
+GenericName[ro]=Navigator de documente
+GenericName[ru]=Программа просмотра документов
+GenericName[se]=Dokumeantalogan
+GenericName[sk]=Prehliadač dokumentácie
+GenericName[sl]=Pregledovalnik dokumentov
+GenericName[sr]=Претраживач докумената
+GenericName[sr@Latn]=Pretraživač dokumenata
+GenericName[ss]=Ibrawuza yelidokhumente
+GenericName[sv]=Dokumentbläddrare
+GenericName[ta]=ஆவண உலாவி
+GenericName[tg]=Тафсири ҳуҷҷат
+GenericName[th]=เครื่องมือเลือกดูแฟ้มเอกสาร
+GenericName[tr]=Belge Tarayıcısı
+GenericName[uk]=Навігатор документів
+GenericName[uz]=Ҳужжат браузери
+GenericName[ven]=Buronza ya manwalwa
+GenericName[vi]=Trình duyệt tài liệu
+GenericName[wa]=Foyteu di documints
+GenericName[xh]=Umkhangeli Wencwadi Zoxwebhu
+GenericName[xx]=xxDocument Browserxx
+GenericName[zh_CN]=文档浏览器
+GenericName[zh_TW]=文件閱讀器
+GenericName[zu]=Umcingi Woshicilelo
+Icon=assistant-qt5
+Terminal=false
+Type=Application
+Categories=Qt;Development;Documentation;
+Exec=/usr/bin/qtchooser -run-tool=assistant -qt=qt5
+X-KDE-StartupNotify=true
