@@ -1,0 +1,89 @@
+[Desktop Entry]
+Name=Qt 5 Designer
+Name[el]=Σχεδιαστής Qt 5
+Name[hu]=Qt 5 Tervező
+Name[it]=Progettazione Qt 5
+Name[ja]=Qt 5デザイナ
+Name[km]=កម្មវិធី​រចនា Qt 5
+Name[nl]=Qt 5 ontwerper
+Name[pa]=Qt 5 ਡਿਜ਼ਾਇਨਰ
+Name[pl]=Projektowanie interfejsów w Qt 5
+Name[ru]=Qt 5 дизайнер
+Name[uk]=Дизайнер Qt 5
+Name[zh_CN]=Qt 5 设计器
+Name[zh_TW]=Qt 5 設計師
+GenericName=Interface Designer
+GenericName[af]=Koppelvlak Ontwerper
+GenericName[ar]=أداة لتصميم واجهة البرامج
+GenericName[az]=Ara Üz Tərtibçisi
+GenericName[bg]=Дизайнер на интерфейси
+GenericName[bn]=ইন্টারফেস পরিকল্পনা
+GenericName[bs]=Qt alat za dizajniranje interfejsa
+GenericName[ca]=Dissenyador d'interfícies
+GenericName[cs]=Návrhář rozhraní
+GenericName[cy]=Dylunydd Rhyngwyneb
+GenericName[da]=Grænsefladedesigner
+GenericName[de]=Schnittstellen-Designer
+GenericName[el]=Σχεδιαστής διασυνδέσεων
+GenericName[eo]=Interfacdesegnilo
+GenericName[es]=Diseñador de interfaces
+GenericName[et]=Kasutajaliidese disainer
+GenericName[eu]=Interfaze Diseinatzailea
+GenericName[fa]=طراح رابط
+GenericName[fi]=Käyttöliittymäsuunnittelija
+GenericName[fo]=Nýtaramótssniðari
+GenericName[fr]=Concepteur d'interface
+GenericName[gl]=Deseñador de Interfaces
+GenericName[he]=מעצב ממשקים
+GenericName[hi]=इंटरफेस डिज़ाइनर
+GenericName[hr]=Dizajner sučelja
+GenericName[hu]=Felülettervező
+GenericName[is]=Viðmótshönnun
+GenericName[it]=Disegnatore di interfacce
+GenericName[ja]=インターフェースデザイナー
+GenericName[km]=កម្មវិធី​រចនា​ចំណុច​ប្រទាក់
+GenericName[ko]=인터페이스 디자이너
+GenericName[lo]=ເຄື່ອງມືອອກແບບສ່ວນຕິດຕໍ່ຜູ້ໃຊ້
+GenericName[lt]=Sąsajos redaktorius
+GenericName[lv]=Starsejas Dizainers
+GenericName[mn]=Гадаргуун дизайнер
+GenericName[ms]=Pereka Antaramuka
+GenericName[mt]=Diżinjatur tal-interfaċċji
+GenericName[nb]=Utforming av grensesnitt
+GenericName[nl]=Interface-ontwerper
+GenericName[nn]=Utforming av grensesnitt
+GenericName[nso]=Mohlami wa Interface
+GenericName[pa]=ਇੰਟਰਫੇਸ ਡਿਜਾਇਨਰ
+GenericName[pl]=Projektowanie interfejsów
+GenericName[pt]=Editor de Interfaces
+GenericName[pt_BR]=Interface do Designer
+GenericName[ro]=Dezvoltator de interfeţe
+GenericName[ru]=Редактор интерфейса приложений Qt
+GenericName[se]=Laktahábmejeaddji
+GenericName[sk]=Návrh rozhrania
+GenericName[sl]=Snovalnik vmesnikov
+GenericName[sr]=Дизајнер интерфејса
+GenericName[sr@Latn]=Dizajner interfejsa
+GenericName[ss]=Umhleli wesichumanisi
+GenericName[sv]=Gränssnittseditor
+GenericName[ta]=முகப்புப் வடிவமைப்பாளர்
+GenericName[tg]=Тароҳи робита
+GenericName[th]=เครื่องมือออกแบบส่วนติดต่อผู้ใช้
+GenericName[tr]=Arayüz tasarım programı
+GenericName[uk]=Дизайн інтерфейсу
+GenericName[uz]=Интерфейс дизайнери
+GenericName[ven]=Muvhati wa nga Phanda
+GenericName[vi]=Trình thiết kế giao diện
+GenericName[wa]=Dessineu d' eterfaces
+GenericName[xh]=Umyili Wezojongongano
+GenericName[xx]=xxInterface Designerxx
+GenericName[zh_CN]=界面设计器
+GenericName[zh_TW]=界面設計師
+GenericName[zu]=Umakhi Womxhumanisi
+Icon=designer-qt5
+Terminal=false
+Type=Application
+MimeType=application/x-designer;
+Categories=Qt;Development;GUIDesigner;
+Exec=/usr/bin/qtchooser -run-tool=designer -qt=qt5
+X-KDE-StartupNotify=true
