@@ -1,0 +1,84 @@
+[Desktop Entry]
+Name=Qt 5 Linguist
+Name[hu]=Qt 5 Nyelvész
+Name[ja]=Qt 5リンギスト
+Name[km]=ភាសាវិទូ Qt 5
+Name[nb]=Qt 5-Linguist
+Name[pa]=Qt 5 ਅਨੁਵਾਦਕ
+Name[pl]=Lingwista Qt 5
+Name[zh_TW]=Qt 5 語言專家
+GenericName=Translation Tool
+GenericName[af]=Vertaling Program
+GenericName[ar]=أداة للترجمة
+GenericName[az]=Tərcümə Vasitəsi
+GenericName[bg]=Инструмент за превод
+GenericName[bn]=অনুবাদ টুল
+GenericName[bs]=Alat za prevođenje
+GenericName[ca]=Eina de traducció
+GenericName[cs]=Překladatelský nástroj
+GenericName[cy]=Erfyn Cyfieithu
+GenericName[da]=Oversættelsesværktøj
+GenericName[de]=Übersetzungsprogramm
+GenericName[el]=Εργαλείο μεταφράσεων
+GenericName[eo]=Tradukilo por Qt-programoj
+GenericName[es]=Herramienta de traducción
+GenericName[et]=Tõlkimise rakendus
+GenericName[eu]=Itzulpenerako Tresnak
+GenericName[fa]=ابزار ترجمه
+GenericName[fi]=Käännöstyökalu
+GenericName[fo]=Umsetingaramboð
+GenericName[fr]=Outil de traduction
+GenericName[gl]=Ferramenta de Traducción
+GenericName[he]=כלי תרגום
+GenericName[hi]=अनुवाद उपकरण
+GenericName[hr]=Uslužni program za prevođenje
+GenericName[hu]=Fordítássegítő
+GenericName[is]=Þýðingartól
+GenericName[it]=Strumento per le traduzioni
+GenericName[ja]=翻訳ツール
+GenericName[km]=ឧបករណ៍​បកប្រែ
+GenericName[ko]=번역 도구
+GenericName[lo]=ເຄື່ອງມືແປພາສາ
+GenericName[lt]=Vertimo įrankis
+GenericName[lv]=Tulkošanas Rīks
+GenericName[mn]=Орчуулгын програм
+GenericName[ms]=Perkakasan Penterjemahan
+GenericName[mt]=Għodda tat-traduzzjoni
+GenericName[nb]=Oversettelsesverktøy
+GenericName[nl]=Vertaalprogramma
+GenericName[nn]=Omsetjingsverktøy
+GenericName[nso]=Sebereka sa Thlathollo
+GenericName[pa]=ਅਨੁਵਾਦ ਸੰਦ
+GenericName[pl]=Narzędzie dla tłumaczy
+GenericName[pt]=Ferramenta de Tradução
+GenericName[pt_BR]=Ferramenta de Tradução
+GenericName[ro]=Utilitar de traducere
+GenericName[ru]=Утилита локализации приложений
+GenericName[se]=Jorgalanneavvu
+GenericName[sk]=Prekladací nástroj
+GenericName[sl]=Orodje za prevajanje
+GenericName[sr]=Алат за превођење
+GenericName[sr@Latn]=Alat za prevođenje
+GenericName[ss]=Lithulusi lekuhumusha
+GenericName[sv]=Översättningsverktyg
+GenericName[ta]=மொழிபெயர்ப்புக் கருவி
+GenericName[tg]=Тарҷумагар барои QT
+GenericName[th]=เครื่องมือแปลภาษา
+GenericName[tr]=Çeviri Aracı
+GenericName[uk]=Засіб для перекладів
+GenericName[uz]=Таржима қилиш воситаси
+GenericName[ven]=Zwishumiswa zwau Dologa
+GenericName[vi]=Công cụ dịch
+GenericName[wa]=Usteye di ratournaedje
+GenericName[xh]=Isixhobo Soguqulelo lomsebenzi kolunye ulwimi
+GenericName[xx]=xxTranslation Toolxx
+GenericName[zh_CN]=翻译工具
+GenericName[zh_TW]=翻譯工具
+GenericName[zu]=Ithuluzi Lokuguqulela
+Icon=linguist-qt5
+Terminal=false
+Type=Application
+MimeType=application/x-linguist;
+Categories=Qt;Development;Translation;
+Exec=/usr/bin/qtchooser -run-tool=linguist -qt=qt5
+X-KDE-StartupNotify=true
