@@ -31,3 +31,6 @@ usr/share/qt5/phrasebooks/polish.qph
 usr/share/qt5/phrasebooks/russian.qph
 usr/share/qt5/phrasebooks/spanish.qph
 usr/share/qt5/phrasebooks/swedish.qph
+debian/desktop/assistant-qt5.desktop usr/share/applications/
+debian/desktop/designer-qt5.desktop usr/share/applications/
+debian/desktop/linguist-qt5.desktop usr/share/applications/
