@@ -55,6 +55,13 @@ else
 endif
 	dh_install --fail-missing
 
+	install -D -p -m0644 src/assistant/assistant/images/assistant-128.png \
+		debian/qttools5-dev-tools/usr/share/pixmaps/assistant-qt5.png
+	install -D -p -m0644 src/designer/src/designer/images/designer.png \
+		debian/qttools5-dev-tools/usr/share/pixmaps/designer-qt5.png
+	install -D -p -m0644 src/linguist/linguist/images/icons/linguist-128-32.png \
+		debian/qttools5-dev-tools/usr/share/pixmaps/linguist-qt5.png
+
 override_dh_strip:
 	dh_strip -pqttools5-examples --dbgsym-migration='qttools5-examples-dbg (<< 5.7.1-1~)'
 	dh_strip --remaining-packages --dbgsym-migration='qttools5-dbg (<< 5.7.1-1~)'
