@@ -1,5 +1,8 @@
 qttools-opensource-src (5.7.1-2) UNRELEASED; urgency=medium
 
+  [ Alexander Volkov ]
+  * Add and install desktop files for assistant, designer and linguist
+    (closes: #775419).
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 29 Dec 2016 00:31:23 +0300
 
